@startuml
title Modèle relationnel OAuth2

hide circle
skinparam shadowing false
skinparam roundcorner 10

entity "application" as application {

    * id_application : UUID <<PK>>

    --

    code : VARCHAR(50) <<UQ>>
    description : VARCHAR(255)
}

entity "oauth2_client" as oauth2_client {

    * id_oauth2_client : UUID <<PK>>

    --

    application_id : UUID <<FK>>

    client_id : VARCHAR(100) <<UQ>>
    client_secret_hash : VARCHAR(255)
}

entity "oauth2_scope" as oauth2_scope {

    * id_oauth2_scope : UUID <<PK>>

    --

    application_id : UUID <<FK>>

    code : VARCHAR(100)
    description : VARCHAR(255)
}

entity "oauth2_client_scope" as oauth2_client_scope {

    * oauth2_client_id : UUID <<PK, FK>>
    * oauth2_scope_id  : UUID <<PK, FK>>
}

application ||--o{ oauth2_client

application ||--o{ oauth2_scope

oauth2_client ||--o{ oauth2_client_scope

oauth2_scope ||--o{ oauth2_client_scope

@enduml